added new/updated pages

--- a/customer-service.html
+++ b/customer-service.html
@@ -3,55 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Customer Service | Top Notch Virtual Assistance</title>
+  <meta name="description" content="Top Notch Virtual Assistance provides responsive customer service support including live chat, email handling, and CRM follow-ups.">
+  <meta name="keywords" content="customer service virtual assistant, remote support, help desk, client care, CRM agents">
+  <meta name="author" content="Top Notch Solutions" />
+  <meta property="og:title" content="Customer Service Support | Top Notch VA" />
+  <meta property="og:description" content="Live chat and email-based virtual support for your growing business." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/TopNotch_Main2.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/customer.html" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+  <title>Customer Support | Top Notch Solutions</title>
 </head>
 <body>
   <header>
-    <img src="images/CustomerAssist.png" alt="Top Notch Logo" class="main-logo" />
-    <h2 class="tagline">Customer Service</h2>
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <nav class="topnav">
+      <a href="index.html">Home</a>
+      <a href="executive.html">Executive Assistance</a>
+      <a href="customer.html">Customer Service</a>
+      <a href="marketing.html">Marketing Support</a>
+    </nav>
   </header>
-
-  <nav class="breadcrumbs">
-    <a href="/">Home</a> > Customer Service
-  </nav>
-
-  <section class="services">
-    <h3>Customer Service Virtual Assistants</h3>
-    <p><strong>Responsive, Friendly, and Professional Remote Support for Your Business</strong></p>
-
-    <h4>Deliver Outstanding Customer Experiences—Without the Overhead</h4>
-    <p>At Top Notch Virtual Assistance, our Customer Service Virtual Assistants help businesses provide top-tier service while saving time, reducing costs, and scaling efficiently. Whether you run an e-commerce store, manage appointments, or support subscription-based clients, our team ensures every customer feels heard, valued, and supported.</p>
-
-    <p>We provide remote customer service support that’s fast, human, and brand-aligned—so your business can maintain its reputation for excellence, even as you grow.</p>
-
-    <h4>Our Customer Support Virtual Services Include:</h4>
-    <ul class="checklist">
-      <li><strong>✅ Live Chat & Email Support:</strong> We manage customer conversations across channels—responding to inquiries, resolving issues, and answering FAQs quickly and professionally.</li>
-      <li><strong>✅ Phone Support & Callback Services:</strong> Need a friendly voice on the line? Our VAs handle inbound calls, outbound follow-ups, and escalations with empathy and clarity.</li>
-      <li><strong>✅ Ticketing & CRM Management:</strong> We manage Zendesk, Freshdesk, Help Scout, and other CRM systems to track cases, close tickets, and deliver data-driven service.</li>
-      <li><strong>✅ Order Processing & Troubleshooting:</strong> From returns and exchanges to tracking shipments and payment confirmations—we ensure every step is clear and handled with care.</li>
-      <li><strong>✅ Reputation & Review Monitoring:</strong> We monitor and respond to reviews on platforms like Google, Yelp, and social media to help preserve your online reputation.</li>
-      <li><strong>✅ Customer Feedback Collection:</strong> Capture the voice of the customer through surveys, follow-ups, and insights that fuel your business improvement efforts.</li>
-    </ul>
-
-    <h4>Why Choose Our Virtual Customer Service Assistants?</h4>
-    <ul class="benefits">
-      <li><strong>🌟 U.S.-Based & Fluent in English:</strong> No language barriers. Your customers interact with real people who understand your market.</li>
-      <li><strong>🤝 White-Glove Support Style:</strong> Every interaction is handled with courtesy, professionalism, and brand consistency.</li>
-      <li><strong>🧠 Trained Across Platforms:</strong> Our VAs are experienced with top helpdesk software, CRMs, and e-commerce platforms.</li>
-      <li><strong>⏱️ Fast Response Times:</strong> Never leave customers waiting—we maintain SLAs and deliver service that exceeds expectations.</li>
-    </ul>
-
-    <h4>Want Your Customers to Rave About Your Service?</h4>
-    <p><strong>📞 Schedule a Free Discovery Call:</strong> We’ll walk you through how a Virtual Customer Service Assistant can strengthen your brand and lighten your workload.</p>
-    <p><strong>📩 Reach out at</strong> <a href="mailto:support@top-notch-solutions.com">support@top-notch-solutions.com</a></p>
-
-    <p><em>Top Notch Virtual Assistance</em><br/>Where customer care meets professional flair.</p>
-  </section>
-
+  <main>
+    <section class="services">
+      <h3>Customer Service</h3>
+      <p>We deliver timely, friendly, and brand-aligned customer service on your behalf—from responding to customer inquiries to managing CRM workflows.</p>
+      <ul>
+        <li>Live Chat & Email Support</li>
+        <li>Phone Support & Callback Handling</li>
+        <li>Ticketing System Management</li>
+        <li>Returns, Tracking, and Orders</li>
+        <li>Review & Feedback Collection</li>
+      </ul>
+    </section>
+  </main>
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <div class="social">
+      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+    </div>
   </footer>
 </body>
 </html>
