--- a/marketing-support.html
+++ b/marketing-support.html
@@ -3,55 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marketing Support | Top Notch Virtual Assistance</title>
+  <meta name="description" content="Top Notch Virtual Assistance helps build your brand with consistent, creative, and affordable marketing services.">
+  <meta name="keywords" content="marketing virtual assistant, content creation, email campaigns, social media help, digital outreach">
+  <meta name="author" content="Top Notch Solutions" />
+  <meta property="og:title" content="Marketing Support Services | Top Notch VA" />
+  <meta property="og:description" content="Creative virtual assistants for branding, email, and content management." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/TopNotch_Main2.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/marketing.html" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+  <title>Marketing Virtual Assistant | Top Notch Solutions</title>
 </head>
 <body>
   <header>
-    <img src="images/marketing.png" alt="Top Notch Logo" class="main-logo" />
-    <h2 class="tagline">Marketing Support</h2>
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <nav class="topnav">
+      <a href="index.html">Home</a>
+      <a href="executive.html">Executive Assistance</a>
+      <a href="customer.html">Customer Service</a>
+      <a href="marketing.html">Marketing Support</a>
+    </nav>
   </header>
-
-  <nav class="breadcrumbs">
-    <a href="/">Home</a> > Marketing Support
-  </nav>
-
-  <section class="services">
-    <h3>Virtual Marketing Assistants to Amplify Your Online Presence</h3>
-    <p><strong>Affordable, Creative, and Strategic Marketing Support</strong></p>
-
-    <h4>Grow Your Brand—Without Growing Your Overhead</h4>
-    <p>At Top Notch Virtual Assistance, our Marketing Virtual Assistants help you reach new customers, stay consistent online, and support your marketing efforts without the cost of a full-time hire. Whether you’re launching a product, running campaigns, or just trying to stay visible—we’re here to help.</p>
-
-    <p>We act as an extension of your marketing team—handling content, engagement, and administrative support so you can focus on the big picture.</p>
-
-    <h4>Our Marketing Virtual Assistant Services Include:</h4>
-    <ul class="checklist">
-      <li><strong>✅ Social Media Management:</strong> Schedule posts, engage with followers, and keep your brand active across platforms like Instagram, Facebook, LinkedIn, and X (Twitter).</li>
-      <li><strong>✅ Email Marketing Support:</strong> Design newsletters, manage subscriber lists, and assist with platforms like Mailchimp, Constant Contact, and ConvertKit.</li>
-      <li><strong>✅ Blog & Content Formatting:</strong> Format and publish blog posts, upload images, manage WordPress or other CMS platforms.</li>
-      <li><strong>✅ Campaign Coordination:</strong> Help plan and execute seasonal promos, launches, or cross-channel efforts with marketing checklists and calendar oversight.</li>
-      <li><strong>✅ Graphic Design Assistance:</strong> Create branded graphics using Canva or support your team with resizing, repurposing, and formatting visuals.</li>
-      <li><strong>✅ Metrics & Report Tracking:</strong> Compile performance reports, track engagement, and help evaluate your campaign efforts.</li>
-    </ul>
-
-    <h4>Why Choose Our Virtual Marketing Assistants?</h4>
-    <ul class="benefits">
-      <li><strong>🎨 Creative & Detail-Oriented:</strong> We keep your visuals clean and your messaging sharp while staying on brand.</li>
-      <li><strong>📅 Consistent Support:</strong> We help maintain your publishing calendar so nothing slips through the cracks.</li>
-      <li><strong>🔧 Familiar With Your Tools:</strong> From Trello and Asana to Canva, Mailchimp, and Google Docs—we fit into your existing workflow.</li>
-      <li><strong>🌍 U.S.-Based with Marketing Know-How:</strong> You’ll communicate clearly with someone who understands how your market thinks.</li>
-    </ul>
-
-    <h4>Ready to Boost Your Visibility and Take Work Off Your Plate?</h4>
-    <p><strong>📞 Book a Free Discovery Call:</strong> Let’s talk about how a Marketing VA can support your next big campaign.</p>
-    <p><strong>📩 Or email us directly at</strong> <a href="mailto:support@top-notch-solutions.com">support@top-notch-solutions.com</a></p>
-
-    <p><em>Top Notch Virtual Assistance</em><br/>Helping your message reach the right people—consistently and professionally.</p>
-  </section>
-
+  <main>
+    <section class="services">
+      <h3>Marketing Support</h3>
+      <p>From social content to email blasts, our marketing VAs help you stay consistent and creative while you grow your audience.</p>
+      <ul>
+        <li>Social Media Scheduling</li>
+        <li>Email Newsletter Campaigns</li>
+        <li>Blog Content Formatting</li>
+        <li>Basic Graphic Design via Canva</li>
+        <li>Brand Voice Audits & Edits</li>
+      </ul>
+    </section>
+  </main>
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <div class="social">
+      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+    </div>
   </footer>
 </body>
 </html>
