--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -3,52 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Executive Assistance | Top Notch Virtual Assistance</title>
+  <meta name="description" content="Top Notch Virtual Assistance provides remote executive support for busy professionals, startups, and business owners.">
+  <meta name="keywords" content="executive virtual assistant, remote admin, calendar scheduling, inbox management, professional support">
+  <meta name="author" content="Top Notch Solutions" />
+  <meta property="og:title" content="Top Notch Executive Support" />
+  <meta property="og:description" content="Reliable executive assistance from expert virtual professionals." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/TopNotch_Main2.png" />
+  <meta property="og:url" content="https://top-notch-solutions.com/executive.html" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+  <title>Executive Virtual Assistant | Top Notch Solutions</title>
 </head>
 <body>
   <header>
-    <img src="images/executive-assistance.png" alt="Top Notch Logo" class="main-logo" />
-    <h2 class="tagline">Executive Assistance</h2>
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <nav class="topnav">
+      <a href="index.html">Home</a>
+      <a href="executive.html">Executive Assistance</a>
+      <a href="customer.html">Customer Service</a>
+      <a href="marketing.html">Marketing Support</a>
+    </nav>
   </header>
-
-  <nav class="breadcrumbs">
-    <a href="/">Home</a> > Executive Assistance
-  </nav>
-
-  <section class="services">
-    <h3>Unlock High-Level Productivity with a Trusted Executive Virtual Assistant</h3>
-    <p>At Top Notch Virtual Assistance, we specialize in providing executive-level virtual support for busy professionals, business owners, and corporate teams. Our Executive Virtual Assistants (EVAs) handle high-priority administrative and operational tasks—so you can focus on big-picture strategy, leadership, and growth.</p>
-
-    <p>Whether you’re a C-level executive, entrepreneur, or department head, our executive assistants are trained to deliver seamless remote executive support that keeps your calendar organized, communications prioritized, and operations flowing smoothly.</p>
-
-    <h4>Our Executive Virtual Assistant Services Include:</h4>
-    <ul class="checklist">
-      <li><strong>✅ Calendar & Schedule Management:</strong> Never miss a meeting. We manage your appointments, send reminders, and coordinate schedules across time zones.</li>
-      <li><strong>✅ Email & Inbox Organization:</strong> Your EVA will triage, flag, respond to, and organize emails so your inbox stays clean and actionable.</li>
-      <li><strong>✅ Travel Planning & Itinerary Management:</strong> From flights and hotels to local transportation, we handle all the logistics and deliver neatly organized travel packets.</li>
-      <li><strong>✅ Meeting Preparation & Note-Taking:</strong> Receive research summaries, agendas, and follow-ups after every meeting—executed with professionalism and confidentiality.</li>
-      <li><strong>✅ Task Delegation & Workflow Automation:</strong> We streamline repetitive tasks and coordinate team handoffs to keep your projects on track and on time.</li>
-      <li><strong>✅ Document Creation & Management:</strong> From drafting reports and formatting presentations to updating SOPs and filing key documents—we’ve got you covered.</li>
-    </ul>
-
-    <h4>Why Choose Our Executive Virtual Assistant Services?</h4>
-    <ul class="benefits">
-      <li><strong>🎯 Experienced in C-Suite Support:</strong> Our EVAs are seasoned in supporting executives in legal, financial, tech, and creative industries.</li>
-      <li><strong>⏱️ On-Demand Flexibility:</strong> Scale support up or down as your workload shifts—no need for full-time overhead.</li>
-      <li><strong>🔒 Confidential & Secure:</strong> We follow strict data protection protocols and confidentiality agreements.</li>
-      <li><strong>🌐 U.S.-Based & English-Fluent:</strong> Clear communication, cultural alignment, and availability during your business hours.</li>
-    </ul>
-
-    <h4>Ready to Streamline Your Day and Maximize Your Impact?</h4>
-    <p><strong>📞 Book a Free Consultation:</strong> Let’s discuss your executive support needs and match you with a dedicated Virtual Assistant who understands your priorities.</p>
-    <p><strong>📩 Or email us directly at</strong> <a href="mailto:support@top-notch-solutions.com">support@top-notch-solutions.com</a></p>
-
-    <p><em>Top Notch Virtual Assistance</em><br/>A human touch in a digital world—professional support you can count on.</p>
-  </section>
-
+  <main>
+    <section class="services">
+      <h3>Executive Assistance</h3>
+      <p>Our Executive Virtual Assistants provide premium administrative support, schedule and inbox management, travel coordination, and document handling—so you can lead with clarity and confidence.</p>
+      <ul>
+        <li>Calendar Management & Scheduling</li>
+        <li>Inbox Triage & Email Response</li>
+        <li>Travel Planning & Logistics</li>
+        <li>Meeting Prep, Notes, & Follow-ups</li>
+        <li>Presentation & Document Drafting</li>
+      </ul>
+    </section>
+  </main>
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <div class="social">
+      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+    </div>
   </footer>
 </body>
 </html>
