--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+    <img src="images/executive-assistance.png" alt="Top Notch Logo" class="main-logo" />
     <nav class="topnav">
       <a href="index.html">Home</a>
       <a href="executive.html">Executive Assistance</a>
