--- a/index.html
+++ b/index.html
@@ -85,16 +85,25 @@
     </div>
   </section>
 
-  <section class="contact">
-    <h3>Contact Us</h3>
-    <form class="contact-form" name="contact" method="POST" data-netlify="true">
-      <input type="hidden" name="form-name" value="contact" />
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
+	<div class="container">
+	  <h1>Contact Us</h1>
+	  <form target="_blank" action="https://formsubmit.co/lmoore0510@gmail.com" method="POST">
+		<div class="form-group">
+		  <div class="form-row">
+			<div class="col">
+			  <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+			</div>
+			<div class="col">
+			  <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+			</div>
+		  </div>
+		</div>
+		<div class="form-group">
+		  <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+		</div>
+		<button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+	  </form>
+	</div>
 
   <footer>
     <p>&copy; 2025 Top Notch Virtual Assistance</p>
