added sitemap, more  changes

--- a/marketing-support.html
+++ b/marketing-support.html
@@ -21,15 +21,15 @@
     <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
     <nav class="topnav">
       <a href="index.html">Home</a>
-      <a href="executive.html">Executive Assistance</a>
-      <a href="customer.html">Customer Service</a>
+      <a href="executive-assistance.html">Executive Assistance</a>
+      <a href="CustomerAssist.html">Customer Service</a>
       <a href="marketing.html">Marketing Support</a>
     </nav>
   </header>
   <main>
     <section class="services">
       <h3>Marketing Support</h3>
-      <p>From social content to email blasts, our marketing VAs help you stay consistent and creative while you grow your audience.</p>
+      <p>From social media content to email blasts, our marketing VAs help you stay consistent and creative while you grow your audience.</p>
       <ul>
         <li>Social Media Scheduling</li>
         <li>Email Newsletter Campaigns</li>
