updated pages, styles, contact form, and header

--- a/customer-service.html
+++ b/customer-service.html
@@ -11,19 +11,25 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/TopNotch_Main2.png" />
   <meta property="og:url" content="https://top-notch-solutions.com/customer.html" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   <title>Customer Support | Top Notch Solutions</title>
 </head>
 <body>
   <header>
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
-    <nav class="topnav">
-      <a href="index.html">Home</a>
-      <a href="executive.html">Executive Assistance</a>
-      <a href="customer.html">Customer Service</a>
-      <a href="marketing.html">Marketing Support</a>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" />
+      </div>
+      <input type="checkbox" id="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="executive-assistance.html">Executive Assistance</a></li>
+        <li><a href="customer-service.html" class="active">Customer Service</a></li>
+        <li><a href="marketing-support.html">Marketing</a></li>
+      </ul>
     </nav>
   </header>
   <main>
