updated pages, styles

--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/TopNotch_Main2.png" />
   <meta property="og:url" content="https://top-notch-solutions.com/executive.html" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
   <title>Executive Virtual Assistant | Top Notch Solutions</title>
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" />
+        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
       </div>
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
