--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   }
   </script>
   <title>Top Notch Virtual Assistance | Executive & Customer Support</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 </head>
@@ -41,7 +41,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" />
+        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
       </div>
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -59,16 +59,16 @@
     <section class="services">
       <h1>Our Services</h1>
       <div class="service-grid">
-        <a href="executive-assistance.html" class="service-box">
-          <img src="images/executive-assistance.png" alt="Executive Assistance" />
+         <a href="executive-assistance.html" class="service-box">
+          <img src="images/executive-assistance.png" alt="Executive Assistance" class="service-icon" />
           <h2>Executive Assistance</h2>
         </a>
         <a href="customer-service.html" class="service-box">
-          <img src="images/CustomerAssist.png" alt="Customer Service" />
+          <img src="images/CustomerAssist.png" alt="Customer Service" class="service-icon" />
           <h2>Customer Service</h2>
         </a>
         <a href="marketing-support.html" class="service-box">
-          <img src="images/marketing.png" alt="Marketing Support" />
+          <img src="images/marketing.png" alt="Marketing Support" class="service-icon" />
           <h2>Marketing Support</h2>
         </a>
       </div>
