reverted back to previous pages and styles

--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -18,18 +18,12 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
-      <div class="logo">
-        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
-      </div>
-      <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon">&#9776;</label>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="executive-assistance.html" class="active">Executive Assistance</a></li>
-        <li><a href="customer-service.html">Customer Service</a></li>
-        <li><a href="marketing-support.html">Marketing</a></li>
-      </ul>
+    <img src="images/executive-assistance.png" alt="Top-Notch Logo" class="main-logo" />
+    <nav class="topnav">
+      <a href="index.html">Home</a>
+      <a href="executive.html">Executive Assistance</a>
+      <a href="customer.html">Customer Service</a>
+      <a href="marketing.html">Marketing Support</a>
     </nav>
   </header>
   <main>
