--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/TopNotch_Main2.png" />
   <meta property="og:url" content="https://top-notch-solutions.com" />
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -32,63 +33,65 @@
     }
   }
   </script>
+
   <title>Top Notch Virtual Assistance | Executive & Customer Support</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
-      </div>
-      <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon">&#9776;</label>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="executive-assistance.html">Executive Assistance</a></li>
-        <li><a href="customer-service.html">Customer Service</a></li>
-        <li><a href="marketing-support.html">Marketing</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+	<header>
+	  <nav class="navbar">
+		<div class="nav-left">
+		  <a href="index.html" class="brand">
+			<img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+		  </a>
+		</div>
+		<input type="checkbox" id="nav-toggle" class="nav-toggle">
+		<label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
+		<ul class="nav-right">
+		  <li><a href="index.html">Home</a></li>
+		  <li><a href="executive-assistance.html">Executive Assistance</a></li>
+		  <li><a href="customer-service.html">Customer Service</a></li>
+		  <li><a href="marketing-support.html">Marketing Support</a></li>
+		  <li><a href="#contact">Contact</a></li>
+		</ul>
+	  </nav>
+	</header>
 
-  <main>
-    <section class="services">
-      <h1>Our Services</h1>
-      <div class="service-grid">
-         <a href="executive-assistance.html" class="service-box">
-          <img src="images/executive-assistance.png" alt="Executive Assistance" class="service-icon" />
-          <h2>Executive Assistance</h2>
-        </a>
-        <a href="customer-service.html" class="service-box">
-          <img src="images/CustomerAssist.png" alt="Customer Service" class="service-icon" />
-          <h2>Customer Service</h2>
-        </a>
-        <a href="marketing-support.html" class="service-box">
-          <img src="images/marketing.png" alt="Marketing Support" class="service-icon" />
-          <h2>Marketing Support</h2>
-        </a>
+  <section class="services">
+    <h3>Our Services</h3>
+    <div class="services-grid">
+      <div class="service-item">
+        <img src="images/executive-assistance.png" alt="Virtual executive assistant helping manage schedule" class="service-icon" />
+        <p><strong>Executive Assistance</strong><br />Efficient daily operations, professional correspondence, and administrative organization.</p>
       </div>
-    </section>
+      <div class="service-item">
+        <img src="images/CustomerAssist.png" alt="Customer Service" class="service-icon" />
+        <p><strong>Customer Service</strong><br />Client engagement, service coordination, and proactive problem-solving.</p>
+      </div>
+      <div class="service-item">
+        <img src="images/marketing.png" alt="Marketing Support" class="service-icon" />
+        <p><strong>Marketing Support</strong><br />Brand communication, digital processes, and promotional outreach.</p>
+      </div>
+    </div>
+  </section>
 
-    <section id="testimonials">
-      <h2>What Our Clients Say</h2>
-      <div class="testimonial">
-        <p>“Top Notch Virtual Assistance helped me take control of my schedule — truly a game-changer!”</p>
-        <h4>- Sarah D., Small Business Owner</h4>
-      </div>
-      <div class="testimonial">
-        <p>“Excellent communication and reliable service. I highly recommend them!”</p>
-        <h4>- Mike L., Marketing Director</h4>
-      </div>
-      <div class="testimonial">
-        <p>“Their marketing support and quick turnaround helped us launch faster than we imagined.”</p>
-        <h4>- Lisa B., Startup Co-Founder</h4>
-      </div>
-    </section>
+  <section id="testimonials">
+    <h2>What Our Clients Say</h2>
+    <div class="testimonial">
+      <p>“Top Notch Virtual Assistance helped me take control of my schedule — truly a game-changer!”</p>
+      <h4>- Sarah D., Small Business Owner</h4>
+    </div>
+    <div class="testimonial">
+      <p>“Excellent communication and reliable service. I highly recommend them!”</p>
+      <h4>- Mike L., Marketing Director</h4>
+    </div>
+    <div class="testimonial">
+      <p>“Their marketing support and quick turnaround helped us launch faster than we imagined.”</p>
+      <h4>- Lisa B., Startup Co-Founder</h4>
+    </div>
+  </section>
 
     <section id="contact" class="contact-section">
       <h2>Contact Us</h2>
