updated pages, styles

--- a/index.html
+++ b/index.html
@@ -34,46 +34,37 @@
   }
   </script>
 
-  <title>Top Notch Virtual Assistance | Executive & Customer Support</title>
+  <title>Top Notch Virtual Assistance</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 </head>
 <body>
-	<header>
-	  <nav class="navbar">
-		<div class="nav-left">
-		  <a href="index.html" class="brand">
-			<img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
-		  </a>
-		</div>
-		<input type="checkbox" id="nav-toggle" class="nav-toggle">
-		<label for="nav-toggle" class="nav-toggle-label">&#9776;</label>
-		<ul class="nav-right">
-		  <li><a href="index.html">Home</a></li>
-		  <li><a href="executive-assistance.html">Executive Assistance</a></li>
-		  <li><a href="customer-service.html">Customer Service</a></li>
-		  <li><a href="marketing-support.html">Marketing Support</a></li>
-		  <li><a href="#contact">Contact</a></li>
-		</ul>
-	  </nav>
-	</header>
 
+  <!-- Header: Logo Only -->
+  <header class="header-centered">
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+  </header>
+
+  <!-- Services Section -->
   <section class="services">
-    <h3>Our Services</h3>
-    <div class="services-grid">
-      <div class="service-item">
-        <img src="images/executive-assistance.png" alt="Virtual executive assistant helping manage schedule" class="service-icon" />
-        <p><strong>Executive Assistance</strong><br />Efficient daily operations, professional correspondence, and administrative organization.</p>
-      </div>
-      <div class="service-item">
+    <h1>Our Services</h1>
+    <div class="service-grid">
+      <a href="executive-assistance.html" class="service-box">
+        <img src="images/executive-assistance.png" alt="Executive Assistance" class="service-icon" />
+        <h2>Executive Assistance</h2>
+        <p>Efficient daily operations, professional correspondence, and administrative organization.</p>
+      </a>
+      <a href="customer-service.html" class="service-box">
         <img src="images/CustomerAssist.png" alt="Customer Service" class="service-icon" />
-        <p><strong>Customer Service</strong><br />Client engagement, service coordination, and proactive problem-solving.</p>
-      </div>
-      <div class="service-item">
+        <h2>Customer Service</h2>
+        <p>Client engagement, service coordination, and proactive problem-solving.</p>
+      </a>
+      <a href="marketing-support.html" class="service-box">
         <img src="images/marketing.png" alt="Marketing Support" class="service-icon" />
-        <p><strong>Marketing Support</strong><br />Brand communication, digital processes, and promotional outreach.</p>
-      </div>
+        <h2>Marketing Support</h2>
+        <p>Brand communication, digital processes, and promotional outreach.</p>
+      </a>
     </div>
   </section>
 
