updated index and styles

--- a/index.html
+++ b/index.html
@@ -1,72 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Top Notch Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals." />
-  <meta name="keywords" content="virtual assistant, executive assistant, customer service, marketing support, remote admin, inbox management, calendar scheduling" />
-  <meta name="author" content="Top Notch Solutions" />
-  <meta property="og:title" content="Top Notch Virtual Assistance | Executive & Customer Support" />
-  <meta property="og:description" content="Reliable virtual assistant services for executives, entrepreneurs, and remote teams." />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/TopNotch_Main2.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Top Notch Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals.">
+  <meta name="keywords" content="virtual assistant, executive assistant, customer service, marketing support, remote admin, inbox management, calendar scheduling">
+  <meta name="author" content="Top Notch Solutions">
+  <meta property="og:title" content="Top Notch Virtual Assistance | Executive & Customer Support">
+  <meta property="og:description" content="Reliable virtual assistant services for executives, entrepreneurs, and remote teams.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="images/TopNotch_Main2.png">
+  <meta property="og:url" content="https://top-notch-solutions.com">
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Top Notch Virtual Assistance",
-    "url": "https://www.top-notch-solutions.com",
-    "logo": "https://www.top-notch-solutions.com/images/TopNotch_Main2.png",
-    "description": "Virtual assistant services specializing in executive support, customer service, and marketing for small businesses and professionals.",
-    "sameAs": [
-      "https://facebook.com/TopNotchVA",
-      "https://instagram.com/TopNotchVA",
-      "https://linkedin.com/company/topnotchva"
-    ],
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "email": "support@top-notch-solutions.com",
-      "contactType": "customer support",
-      "availableLanguage": "English"
-    }
-  }
-  </script>
-
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
   <title>Top Notch Virtual Assistance</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 </head>
 <body>
-
-  <!-- Header: Logo Only -->
-  <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo" />
+  <header style="text-align: center; background: linear-gradient(to right, #0f1d5e, #1c2d91); padding: 2rem 1rem;">
+    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo">
   </header>
 
-  <!-- Services Section -->
-  <section class="services">
-    <h1>Our Services</h1>
-    <div class="service-grid">
-      <a href="executive-assistance.html" class="service-box">
-        <img src="images/executive-assistance.png" alt="Executive Assistance" class="service-icon" />
-        <h2>Executive Assistance</h2>
-        <p>Efficient daily operations, professional correspondence, and administrative organization.</p>
-      </a>
-      <a href="customer-service.html" class="service-box">
-        <img src="images/CustomerAssist.png" alt="Customer Service" class="service-icon" />
-        <h2>Customer Service</h2>
-        <p>Client engagement, service coordination, and proactive problem-solving.</p>
-      </a>
-      <a href="marketing-support.html" class="service-box">
-        <img src="images/marketing.png" alt="Marketing Support" class="service-icon" />
-        <h2>Marketing Support</h2>
-        <p>Brand communication, digital processes, and promotional outreach.</p>
-      </a>
-    </div>
-  </section>
+  <main>
+    <h2 style="text-align: center; margin-top: 2rem; color: #222;">Our Services</h2>
+
+    <section class="services-section">
+      <div class="service-card">
+        <img src="images/executive-icon.png" alt="Executive Assistance Icon" class="service-icon">
+        <div class="service-title">Executive Assistance</div>
+        <p class="service-description">Efficient daily operations, professional correspondence, and administrative organization.</p>
+        <a href="executive-assistance.html" class="learn-more">Learn more</a>
+      </div>
+
+      <div class="service-card">
+        <img src="images/customer-icon.png" alt="Customer Service Icon" class="service-icon">
+        <div class="service-title">Customer Service</div>
+        <p class="service-description">Client engagement, service coordination, and proactive problem-solving.</p>
+        <a href="CustomerAssist.html" class="learn-more">Learn more</a>
+      </div>
+    </section>
+  </main>
+</body>
+</html>
 
   <section id="testimonials">
     <h2>What Our Clients Say</h2>
